Changes made:- 1. Fixed discord link. 2. Added transitions. 3. Added responsiveness through flexbox. 4. Other minor changes and tweaks.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="logo">
-        <a href="index.html"><img src="images/sks_logo.png" alt="sks_logo" style="width: 10vw;"></a>
+        <a href="index.html"><img src="images/sks_logo.png" alt="sks_logo" style="width: 9vw;"></a>
     </div>
 
     <header>
@@ -36,7 +36,9 @@
     <hr>
 
     <nav>
-        <div id="navq">What would you like to know about me ?</div>
+        <div id="navq">
+            What would you like to know about me ?
+        </div>
         <div id="navi">
             <a href="#origin">Origin</a>
             <a href="#school">Schooling</a>
@@ -85,16 +87,12 @@
                 <h2 class="ch">Ho<span class="accent">BB</span>ies</h2>
             </a>
             <div class="cdl">
-                (To be formatted)
-                <ul>
-                    <li>Gaming &#x1f3ae;</li>
-                    <li>Drawing & Painting &#x1f3a8;</li>
-                    <li>Watching YouTube &#128250;</li>
-                    <li>Coding &#128104;&#8205;&#128187;</li>
-                    <li>Photography & Editing &#128247;</li>
-                    <li>Listening to Music &#127925;</li>
-
-                </ul>
+                    <div class="cdli">Gaming &#x1f3ae;</div>
+                    <div class="cdli">Drawing & Painting &#x1f3a8;</div>
+                    <div class="cdli">Watching YouTube &#128250;</div>
+                    <div class="cdli">Coding &#128104;&#8205;&#128187;</div>
+                    <div class="cdli">Photography & Editing &#128247;</div>
+                    <div class="cdli">Listening to Music &#127925;</div>
             </div>
         </section>
 
@@ -135,20 +133,23 @@
                 <h2 class="ch">Contact <span class="accent">ME</span></h2>
             </a>
             <div class="smi">
-                <a href="mailto:shlok845@gmail.com" target="_blank"><img src="images/social media icons/Gmail.png"
+                <a href="mailto:shlok845@gmail.com" target="_blank" class="smbox"><img src="images/social media icons/Gmail.png"
                         alt="instagram-icon" class="sm"></a>
-                <a href="https://www.linkedin.com/in/shlok-kumar-shaw-71a883203/" target="_blank"><img
+                <a href="https://www.linkedin.com/in/shlok-kumar-shaw-71a883203/" target="_blank" class="smbox"><img
                         src="images/social media icons/LinkedIn.svg" alt="linkedin-icon" class="sm"></a>
-                <a href="https://github.com/shlok-007" target="_blank"><img src="images/social media icons/github.svg"
+                <a href="https://github.com/shlok-007" target="_blank" class="smbox"><img src="images/social media icons/github.svg"
                         alt="github-icon" class="sm"></a>
-                <a href="https://www.instagram.com/shlok_3.14/" target="_blank"><img
+                <a href="https://www.instagram.com/shlok_3.14/" target="_blank" class="smbox"><img
                         src="images/social media icons/Instagram.png" alt="instagram-icon" class="sm"></a>
-                <a href="https://twitter.com/ShlokShaw" target="_blank"><img src="images/social media icons/Twitter.png"
+                <a href="https://twitter.com/ShlokShaw" target="_blank" class="smbox"><img src="images/social media icons/Twitter.png"
                         alt="twitter-icon" class="sm"></a>
-                <a href=": https://discord.com/users/774248501906767884" target="_blank"><img
-                        src="images/social media icons/discord.svg" alt="discord-icon" class="sm"></a>
-                <a href="https://www.youtube.com/channel/UC4Lrc-uHK6MxjRmP-LcwiNw" target="_blank"><img
+                <!-- <a href="https://discord.com/users/774248501906767884" target="_blank"><img
+                        src="images/social media icons/discord.svg" alt="discord-icon" class="sm"></a> -->
+                <span onclick="copyfn('Shlok#9731'); " class="smbox"><img src="images/social media icons/discord.svg"
+                        alt="discord-icon" class="sm"></span>
+                <a href="https://www.youtube.com/channel/UC4Lrc-uHK6MxjRmP-LcwiNw" target="_blank" class="smbox"><img
                         src="images/social media icons/youtube.svg" alt="youtube-icon" class="sm"></a>
+
             </div>
         </section>
     </main>
