Changes made: 1. Added responsiveness to the content section. 2. Fixed formatting issues. 3. Other minor changes and tweaks.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a id="origin">
                 <h2 class="ch"><span class="accent">O</span>ri<span class="accent">G</span>in</h2>
             </a>
+            <div class="box">
             <div class="ci">
                 <img src="images/Kolkata.jpeg" alt="kolkata_illustration">
             </div>
@@ -63,29 +64,32 @@
                 love the most about this place is, the friendly & welcoming people and the festivities especially the
                 Durga Puja.
             </div>
+            </div>
         </section>
 
         <section>
             <a id="school">
                 <h2 class="ch">Sch<span class="accent">OO</span>ling</h2>
             </a>
+            <div class="box">
             <div class="ci">
                 <img src="images/11-D_Class_photo.jpeg" alt="aps-bkp_batch-2020-2021">
+                <div class="cc">(Spot me ;-)</div>
             </div>
-
-            <div class="cc">(Spot me ;-)</div>
 
             <div class="cd">I have been a student of <a href="https://www.apsbkp.in/" target="_blank">Army Public
                     School-Barrackpore</a>
                 and have completed my 10+2 here. There are a lot of memories associated with this place. The rules were
                 very strict and were followed too, which annoyed me a lot, but now I do realise its importance and its
                 impact in shaping my character. Overall, it was a very great & memorable experience studying here.</div>
+            </div>
         </section>
 
         <section>
             <a id="hobby">
                 <h2 class="ch">Ho<span class="accent">BB</span>ies</h2>
             </a>
+            <div class="box">
             <div class="cdl">
                     <div class="cdli">Gaming &#x1f3ae;</div>
                     <div class="cdli">Drawing & Painting &#x1f3a8;</div>
@@ -93,6 +97,7 @@
                     <div class="cdli">Coding &#128104;&#8205;&#128187;</div>
                     <div class="cdli">Photography & Editing &#128247;</div>
                     <div class="cdli">Listening to Music &#127925;</div>
+            </div>
             </div>
         </section>
 
