Changes Made: 1. Updated and formatted "Hobbies" section.
2. Updated and formatted "Projects" section.

3. Other minor improvements and tweaks.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
     <title>about.shlok</title>
     <link rel="stylesheet" href="style_personal_website.css">
-    <script src="personal_website_javascript.js"></script>
+    <link rel="stylesheet" href="flickity.css">
     <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
     <link rel="icon" href="images/sks_logo.png" type="image/x-icon">
-
-
 </head>
 
 <body>
@@ -48,106 +46,248 @@
             <a href="#contact">Contact Me</a>
         </div>
     </nav>
-
+    <br><br>
     <main>
         <section>
             <a id="origin">
                 <h2 class="ch"><span class="accent">O</span>ri<span class="accent">G</span>in</h2>
             </a>
             <div class="box">
-            <div class="ci">
-                <img src="images/Kolkata.jpeg" alt="kolkata_illustration">
-            </div>
-            <div class="cd">
-                I was born on 30<sup>th</sup> June 2003 at Kankinara, a city in West Bengal. Inspite of living in
-                Bengal, my primary language is not Bengali, but a combination of Hindi and its dialects. The thing I
-                love the most about this place is, the friendly & welcoming people and the festivities especially the
-                Durga Puja.
-            </div>
+                <div class="ci">
+                    <img src="images/Kolkata.jpeg" alt="kolkata_illustration">
+                </div>
+                <div class="cd">
+                    I was born on 30<sup>th</sup> June 2003 at Kankinara, a city in West Bengal. Inspite of living in
+                    Bengal, my primary language is not Bengali, but a combination of Hindi and its dialects. The thing I
+                    love the most about this place is, the friendly & welcoming people and the festivities especially
+                    the
+                    Durga Puja.
+                </div>
             </div>
         </section>
+
+        <br><br>
 
         <section>
             <a id="school">
                 <h2 class="ch">Sch<span class="accent">OO</span>ling</h2>
             </a>
             <div class="box">
-            <div class="ci">
-                <img src="images/11-D_Class_photo.jpeg" alt="aps-bkp_batch-2020-2021">
-                <div class="cc">(Spot me ;-)</div>
-            </div>
+                <div class="ci">
+                    <img src="images/11-D_Class_photo.jpeg" alt="aps-bkp_batch-2020-2021">
+                    <div class="cc">(Spot me ;-)</div>
+                </div>
 
-            <div class="cd">I have been a student of <a href="https://www.apsbkp.in/" target="_blank">Army Public
-                    School-Barrackpore</a>
-                and have completed my 10+2 here. There are a lot of memories associated with this place. The rules were
-                very strict and were followed too, which annoyed me a lot, but now I do realise its importance and its
-                impact in shaping my character. Overall, it was a very great & memorable experience studying here.</div>
+                <div class="cd">I have been a student of <a href="https://www.apsbkp.in/" target="_blank">Army Public
+                        School-Barrackpore</a>
+                    and have completed my 10+2 here. There are a lot of memories associated with this place. The rules
+                    were
+                    very strict and were followed too, which annoyed me a lot, but now I do realise its importance and
+                    its
+                    impact in shaping my character. Overall, it was a very great & memorable experience studying here.
+                </div>
             </div>
         </section>
 
-        <section>
-            <a id="hobby">
-                <h2 class="ch">Ho<span class="accent">BB</span>ies</h2>
-            </a>
-            <div class="box">
-            <div class="cdl">
-                    <div class="cdli">Gaming &#x1f3ae;</div>
-                    <div class="cdli">Drawing & Painting &#x1f3a8;</div>
-                    <div class="cdli">Watching YouTube &#128250;</div>
-                    <div class="cdli">Coding &#128104;&#8205;&#128187;</div>
-                    <div class="cdli">Photography & Editing &#128247;</div>
-                    <div class="cdli">Listening to Music &#127925;</div>
-            </div>
-            </div>
-        </section>
+        <br><br>
 
-        <section>
-            <a id="proj">
-                <h2 class="ch">My Pr<span class="accent">OJ</span>ects</h2>
-            </a>
-            <div class="cd">
-                (To be formatted)
-                <dl>
-                    <dt>
-                        Post-Paid Bill Generation System
-                    <dd>It was my class 12's group project. Language used is Python.</dd>
-                    </dt>
-                    <dt>
-                        Sudoku Solver
-                    <dd>Made using Python employing the BackTracking algorithm. I made this while helping my friend with
-                        his assignment.</dd>
-                    </dt>
-                    <dt>
-                        Famous Graphs
-                    <dd>The MandleBrot Set and the Bifurcation Diagram using Python & MatPlotLib.</dd>
-                    </dt>
-                </dl>
+        <a id="hobby">
+            <h2 class="ch">Ho<span class="accent">BB</span>ies</h2>
+        </a>
+
+        <div class="duo">
+            <div class="duo__cell cdli">Drawing & Painting &#x1f3a8;</div>
+            <div class="carousel duo__cell" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/hobbies/peacock.jpg" alt="peacock"></div>
+                <div class="carousel-cell"><img src="images/hobbies/maa_durga.jpg" alt="maa_durga"></div>
+                <div class="carousel-cell"><img src="images/hobbies/woodpecker.jpg" alt="woodpecker"></div>
+                <div class="carousel-cell"><img src="images/hobbies/shera.jpg" alt="shera"></div>
+                <div class="carousel-cell"><img src="images/hobbies/dolphin.jpg" alt="dolphin"></div>
+                <div class="carousel-cell"><img src="images/hobbies/diwali.jpg" alt="diwali"></div>
+                <div class="carousel-cell"><img src="images/hobbies/scratch_painting.jpg" alt="scratch_painting"></div>
+                <div class="carousel-cell"><img src="images/hobbies/dot_painting.jpg" alt="dot_painting"></div>
+                <div class="carousel-cell"><img src="images/hobbies/mosaic.jpg" alt="mosaic_painting"></div>
+                <div class="carousel-cell"><img src="images/hobbies/thirsty_crow.jpg" alt="thirsty_crow"></div>
+                <div class="carousel-cell"><img src="images/hobbies/shri_krishna.jpg" alt="shri_krishna"></div>
             </div>
-        </section>
+        </div>
+        <br><br>
+
+        <div class="duo">
+            <div class="cdli duo__cell">Coding &#128104;&#8205;&#128187;
+                <br><span class=" cc">(Click the tiles for my profile)</span>
+            </div>
+            <div class="carousel duo__cell" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><a href="https://codeforces.com/profile/Shlok007" target="_blank"><img
+                            src="images/hobbies/codeforces.jpg" alt="codeforces_logo"></a></div>
+                <div class="carousel-cell"><a href="https://www.hackerrank.com/shlok845" target="_blank"><img
+                            src="images/hobbies/HackerRank.png" alt="HackerRank_logo"></a></div>
+
+            </div>
+        </div>
+        <br><br>
+
+        <div class="duo">
+            <div class="cdli duo__cell">Gaming &#x1f3ae;</div>
+            <div class="carousel duo__cell" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/hobbies/minecraft.jpg" alt="minecraft_poster"></div>
+                <div class="carousel-cell"><img src="images/hobbies/pubg.jpg" alt="pubg_poster"></div>
+                <div class="carousel-cell"><img src="images/hobbies/amongus.jpg" alt="amongus"></div>
+            </div>
+        </div>
+        <br><br>
+
+        <div class="duo">
+            <div class="cdli duo__cell">Photography & Editing &#128247;</div>
+            <div class="carousel duo__cell" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/hobbies/photo (1).jpg" alt="landscape-1"></div>
+                <div class="carousel-cell"><img src="images/hobbies/photo (2).jpg" alt="landscape-2"></div>
+                <div class="carousel-cell"><img src="images/hobbies/photo (3).jpg" alt="landscape-3"></div>
+            </div>
+        </div>
+        <br><br>
+        <div class="duo">
+            <div class="cdli duo__cell">Watching YouTube &#128250;</div>
+            <div class="carousel duo__cell" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/hobbies/pbs_space_time.jpg" alt="pbs_space_time"></div>
+                <div class="carousel-cell"><img src="images/hobbies/veritasium.jpg" alt="veritasium"></div>
+                <div class="carousel-cell"><img src="images/hobbies/Game_Theory.jpeg" alt="Game_Theory"></div>
+                <div class="carousel-cell"><img src="images/hobbies/smarter-every-day.jpg" alt="smarter-every-day">
+                </div>
+                <div class="carousel-cell"><img src="images/hobbies/kurzgesagt.jpg" alt="kurzgesagt"></div>
+                <div class="carousel-cell"><img src="images/hobbies/mark_rober.jpg" alt="mark_rober"></div>
+                <div class="carousel-cell"><img src="images/hobbies/ted_ed.jpeg" alt="ted_ed"></div>
+                <div class="carousel-cell"><img src="images/hobbies/ddoi.jpg" alt="daily dose of internet"></div>
+                <div class="carousel-cell"><img src="images/hobbies/lesics.jpg" alt="lesics"></div>
+                <div class="carousel-cell"><img src="images/hobbies/Dude-Perfect.jpg" alt="Dude-Perfect"></div>
+                <div class="carousel-cell"><img src="images/hobbies/ltt_logo.jpg" alt="linus tech tips"></div>
+                <div class="carousel-cell"><img src="images/hobbies/mrwtb.jpg" alt="mrwhosetheboss"></div>
+            </div>
+        </div>
+        <br><br>
+
+        <div class="duo">
+            <div class="cdli duo__cell">Listening to Music &#127925;</div>
+            <div class="carousel duo__cell" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/hobbies/alan_walker.jpg" alt="alan_walker"></div>
+                <div class="carousel-cell"><img src="images/hobbies/arijit-singh.jpg" alt="arijit-singh"></div>
+            </div>
+        </div>
+
+        <br><br><br><br>
+
+        <a id="proj">
+            <h2 class="ch">My Pr<span class="accent">OJ</span>ects</h2>
+        </a>
+
+        <br><br><br>
+
+        <div class="duo">
+            <div class="duo__cell carousel" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/3.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/9.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/5.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/2.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/10.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/1.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/4.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/6.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/7.png" alt="screenshot of execution"></div>
+                <div class="carousel-cell"><img src="images/Projects/PPBGS/8.png" alt="screenshot of execution"></div>
+
+
+            </div>
+            <div class="duo__cell">
+                <div class="proh">
+                    Post-Paid Bill Generation System <a
+                        href="https://drive.google.com/drive/folders/14x7Vera6yYGjIMyVnnuCqjh7Yk8DLSHN?usp=sharing"
+                        target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
+                            style="width: min(35px,3vw); margin-left: 1vw;"></a>
+                </div>
+                <div class="prod">It was my class 12's group project. Language used is Python.</div>
+            </div>
+        </div>
+
+        <br><br><br><br>
+
+        <div class="duo">
+            <div class="duo__cell carousel" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/Projects/Sudoku Solver/2.jpg" alt="screenshot of execution">
+                </div>
+                <div class="carousel-cell"><img src="images/Projects/Sudoku Solver/5.jpg" alt="screenshot of execution">
+                </div>
+                <div class="carousel-cell"><img src="images/Projects/Sudoku Solver/4.jpg" alt="screenshot of execution">
+                </div>
+                <div class="carousel-cell"><img src="images/Projects/Sudoku Solver/3.jpg" alt="screenshot of execution">
+                </div>
+                <div class="carousel-cell"><img src="images/Projects/Sudoku Solver/1.jpg" alt="screenshot of execution">
+                </div>
+            </div>
+            <div class="duo__cell">
+                <div class="proh">Sudoku Solver<a
+                        href="https://drive.google.com/drive/folders/1XVj_KcH6iexf4SLozyYgUlpxTFAhJYY8?usp=sharing"
+                        target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
+                            style="width: min(35px,3vw); margin-left: 1vw;"></a></div>
+                <div class="prod">Made using Python employing the BackTracking algorithm. I made this while helping my
+                    friend with his assignment.</div>
+            </div>
+        </div>
+
+        <br><br><br><br>
+
+        <div class="duo">
+            <div class="duo__cell carousel" data-flickity='{ "autoPlay": 1500 }'>
+                <div class="carousel-cell"><img src="images/Projects/Graphs/Bifurcation Diagram.png"
+                        alt="output images"></div>
+                <div class="carousel-cell"><img src="images/Projects/Graphs/MandleBrotSetColour.PNG"
+                        alt="output images"></div>
+            </div>
+            <div class="duo__cell">
+                <div class="proh">Famous Graphs<a
+                        href="https://drive.google.com/drive/folders/1nDQUK1LHA86k9OfFVWD2suQClXGtDM6l?usp=sharing"
+                        target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
+                            style="width: min(35px,3vw); margin-left: 1vw;"></a></div>
+                <div class="prod">The MandleBrot Set and the Bifurcation Diagram using Python & MatPlotLib.</div>
+            </div>
+        </div>
+
+        <br><br>
 
         <section>
             <a id="goals">
                 <h2 class="ch">Future <span class="accent">GO</span>als</h2>
             </a>
-            <div class="cd">
-                Haven't decided yet.
+            <div class="box">
+                <div class="ci">
+                    <img src="images/goals.jpg" alt="goals_image" style="width: 20vw;">
+                    <div class="cc" style="font-size: min(18px, 1rem);">created by @vectorjuice on <a
+                            href="www.freepik.com" target="_blank">freepik</a>
+                    </div>
+                </div>
+
+                <div class="cd" id="gl">
+                    Haven't decided yet. Still exploring....
+                </div>
             </div>
         </section>
+
+        <br><br><br><br>
+
         <section>
             <a id="contact">
                 <h2 class="ch">Contact <span class="accent">ME</span></h2>
             </a>
             <div class="smi">
-                <a href="mailto:shlok845@gmail.com" target="_blank" class="smbox"><img src="images/social media icons/Gmail.png"
-                        alt="instagram-icon" class="sm"></a>
+                <a href="mailto:shlok845@gmail.com" target="_blank" class="smbox"><img
+                        src="images/social media icons/Gmail.png" alt="instagram-icon" class="sm"></a>
                 <a href="https://www.linkedin.com/in/shlok-kumar-shaw-71a883203/" target="_blank" class="smbox"><img
                         src="images/social media icons/LinkedIn.svg" alt="linkedin-icon" class="sm"></a>
-                <a href="https://github.com/shlok-007" target="_blank" class="smbox"><img src="images/social media icons/github.svg"
-                        alt="github-icon" class="sm"></a>
+                <a href="https://github.com/shlok-007" target="_blank" class="smbox"><img
+                        src="images/social media icons/github.svg" alt="github-icon" class="sm"></a>
                 <a href="https://www.instagram.com/shlok_3.14/" target="_blank" class="smbox"><img
                         src="images/social media icons/Instagram.png" alt="instagram-icon" class="sm"></a>
-                <a href="https://twitter.com/ShlokShaw" target="_blank" class="smbox"><img src="images/social media icons/Twitter.png"
-                        alt="twitter-icon" class="sm"></a>
+                <a href="https://twitter.com/ShlokShaw" target="_blank" class="smbox"><img
+                        src="images/social media icons/Twitter.png" alt="twitter-icon" class="sm"></a>
                 <!-- <a href="https://discord.com/users/774248501906767884" target="_blank"><img
                         src="images/social media icons/discord.svg" alt="discord-icon" class="sm"></a> -->
                 <span onclick="copyfn('Shlok#9731'); " class="smbox"><img src="images/social media icons/discord.svg"
@@ -157,10 +297,14 @@
 
             </div>
         </section>
+
+
     </main>
     <footer>
         Thanks for visiting my website :-)
     </footer>
+    <script src="personal_website_javascript.js"></script>
+    <script src="flickity.pkgd.min.js"></script>
 </body>
 
 </html>
