Changes made:- 1. Fixed an issue with the code icon in the "Projects" section. 2. Other minor tweaks and improvements.

--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
         <a id="proj">
             <h2 class="ch">My Pr<span class="accent">OJ</span>ects</h2>
         </a>
+        <div class="cc" style="display: flex; flex-direction:row; align-items:center; justify-content:center">Click <img
+                src="images/Projects/code_icon.png" alt="code-icon" style="width: min(30px,7vw); margin: 0 0.5vw 0;">
+            for the project code</div>
 
         <br><br><br>
 
@@ -199,10 +202,10 @@
             </div>
             <div class="duo__cell">
                 <div class="proh">
-                    Post-Paid Bill Generation System <a
-                        href="https://drive.google.com/drive/folders/14x7Vera6yYGjIMyVnnuCqjh7Yk8DLSHN?usp=sharing"
-                        target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
-                            style="width: min(35px,3vw); margin-left: 1vw;"></a>
+                    Post-Paid Bill Generation System
+                    <a href="https://drive.google.com/drive/folders/14x7Vera6yYGjIMyVnnuCqjh7Yk8DLSHN?usp=sharing" target="_blank">
+                        <img src="images/Projects/code_icon.png" alt="code-icon" style="width: min(35px,7vw); margin-left: 1vw;">
+                    </a>
                 </div>
                 <div class="prod">It was my class 12's group project. Language used is Python.</div>
             </div>
@@ -227,9 +230,8 @@
                 <div class="proh">Sudoku Solver<a
                         href="https://drive.google.com/drive/folders/1XVj_KcH6iexf4SLozyYgUlpxTFAhJYY8?usp=sharing"
                         target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
-                            style="width: min(35px,3vw); margin-left: 1vw;"></a></div>
-                <div class="prod">Made using Python employing the BackTracking algorithm. I made this while helping my
-                    friend with his assignment.</div>
+                            style="width: min(35px,7vw); margin-left: 1vw;"></a></div>
+                <div class="prod">It is a Sudoku-Solver coded using Python employing the BackTracking algorithm. I made this while helping my friend with his assignment.</div>
             </div>
         </div>
 
@@ -246,8 +248,8 @@
                 <div class="proh">Famous Graphs<a
                         href="https://drive.google.com/drive/folders/1nDQUK1LHA86k9OfFVWD2suQClXGtDM6l?usp=sharing"
                         target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
-                            style="width: min(35px,3vw); margin-left: 1vw;"></a></div>
-                <div class="prod">The MandleBrot Set and the Bifurcation Diagram using Python & MatPlotLib.</div>
+                            style="width: min(35px,7vw); margin-left: 1vw;"></a></div>
+                <div class="prod">In these Projects, I tried to plot the MandleBrot Set and the Bifurcation Diagram using Python employing the libraries MatPlotLib, Pandas, and NumPy.</div>
             </div>
         </div>
 
