1) Added Replit link to Sudoku Solver. 2) Removed redundant comments.

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="duo__cell">
                 <div class="proh">Sudoku Solver<a
-                        href="https://drive.google.com/drive/folders/1XVj_KcH6iexf4SLozyYgUlpxTFAhJYY8?usp=sharing"
+                        href="https://replit.com/join/ecgqrwhgof-shlok-007"
                         target="_blank"><img src="images/Projects/code_icon.png" alt="code-icon"
                             style="width: min(35px,7vw); margin-left: 1vw;"></a></div>
                 <div class="prod">It is a Sudoku-Solver coded using Python employing the BackTracking algorithm. I made this while helping my friend with his assignment.</div>
@@ -290,8 +290,6 @@
                         src="images/social media icons/Instagram.png" alt="instagram-icon" class="sm"></a>
                 <a href="https://twitter.com/ShlokShaw" target="_blank" class="smbox"><img
                         src="images/social media icons/Twitter.png" alt="twitter-icon" class="sm"></a>
-                <!-- <a href="https://discord.com/users/774248501906767884" target="_blank"><img
-                        src="images/social media icons/discord.svg" alt="discord-icon" class="sm"></a> -->
                 <span onclick="copyfn('Shlok#9731'); " class="smbox"><img src="images/social media icons/discord.svg"
                         alt="discord-icon" class="sm"></span>
                 <a href="https://www.youtube.com/channel/UC4Lrc-uHK6MxjRmP-LcwiNw" target="_blank" class="smbox"><img
